# stripe-payment-setup

./: .env.sample  .gitignore  pyproject.toml
stripe_setup_payment/: app.py
tests/: test_stripe_setup_payment.py
